@@ -164,7 +164,8 @@ class EntryPrinter:
             for link in sorted(entry.links):
                 strings.append('^{}'.format(link))
 
-        oss.write('{e.date} {e.flag} {}\n'.format(' '.join(strings), e=entry))
+        oss.write('{} {} {}\n'.format(entry.date, entry.flag if
+            entry.flag else 'txn', ' '.join(strings)))
         self.write_metadata(entry.meta, oss)
 
         rows = [self.render_posting_strings(posting)
